<resources>
    <string name="app_name">Sharlet</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_description">Sharlet is the most secure and faster file sharing app. Unlike other apps, Sharlet lets you choose and configure the network you want to use to share files. Uses encryption to protect data privacy over any network. Sharlet also uses its core features to make file sharing easier giving you the control.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_full_screen">full_screen</string>
    <string name="by_moonslab_music">by MoonsLab · Music</string>
    <string name="no_result">No result</string>
    <string name="by_moonslab_files">by MoonsLab · Files</string>
    <string name="by_moonslab_home">by MoonsLab · Home</string>
    <string name="change_photo">Change photo</string>
    <string name="change_name">Change name</string>
    <string name="set_name">Set name</string>
    <string name="set_photo">Set photo</string>
    <string name="hotspot_this_device_tap_to_setup_edit">Hotspot(this device, tap to setup/edit)</string>
    <string name="scanning">"Scanning "</string>
    <string name="sending">"Sending "</string>
    <string name="failed_error_while_encrypting">❌ Failed, Error while encrypting.</string>
    <string name="android_universal_file_sharer">Android\'s universal file sharer</string>
    <string name="sharlet_logo">Sharlet logo</string>
    <string name="logo">Logo</string>
    <string name="dot_icon"></string>
    <string name="close_icon"></string>
    <string name="space" />
    <string name="skip">Skip</string>
    <string name="continue_text">Continue</string>
    <string name="arrow_right"></string>
    <string name="measuring">Measuring…</string>
    <string name="wait_for_receiver_to_discover_or_just_tell_to_scan_qr_quickly">Wait for receiver to discover or just tell to scan QR quickly.</string>
    <string name="waiting_for_receiver">Waiting for receiver</string>
    <string name="please_wait">Please wait…</string>
    <string name="pc_ios">PC/iOS</string>
    <string name="fa_close"></string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="please_confirm_before_continue">Please confirm before continue.</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="got_it">Got it</string>
    <string name="copy">Copy</string>
    <string name="visit_on_any_device">Visit on any device</string>
    <string name="sender_is_not_ready_yet">Sender is not ready yet!</string>
    <string name="sending_files">Sending files…</string>
    <string name="a_portal_is_open_and_sending_files_tap_to_open">📲️ A portal is open and sending files. Tap to open.</string>
    <string name="fa_send"></string>
    <string name="connect_to_any_wifi_or_create_hotspot">Connect to any wifi or create hotspot</string>
    <string name="waiting_for_receiver_dots">Waiting for receiver…</string>
    <string name="up_to_32mb_s_speed">32MB/S+ Turbo mode</string>
    <string name="up_to_32mb_s_file_transfer_speed_on_5ghz_band_and_12mb_s_on_2_4ghz_band">Up to 32MB/S file transfer speed with Turbo mode, 12MB/S on normal</string>
    <string name="send_files_to_android_ios_macos_linux_anything_that_is_connected_to_your_wifi">Android, iOS, MacOS, Windows anything that is connected to your wifi</string>
    <string name="send_to_any_device">Send to Any Device</string>
    <string name="no_risk_of_data_privacy_personal_hotspot_usage_pin_protection_data_encryption"><![CDATA[No risk of data privacy. Personal hotspot usage, PIN protection & Data encryption]]></string>
    <string name="permissions">Permissions</string>
    <string name="sharlet_needs_only_3_permissions_once_and_for_all">Sharlet needs only three permissions once and for all</string>
    <string name="file_management">1. File management</string>
    <string name="sharlet_needs_to_access_your_files_to_be_able_to_send_and_receive_its_safe_and_sharlet_never_deletes_your_files">Sharlet needs to access your files to be able to send and receive. Its safe and Sharlet never deletes your files</string>
    <string name="_2_read_external_storage">2. Read external storage</string>
    <string name="sharlet_needs_this_permission_to_be_able_to_read_sd_card_files_similar_to_file_management">Sharlet needs this permission to be able to read SD Card files. Similar to file management</string>
    <string name="_3_location">3. Location(Optional)</string>
    <string name="this_is_needed_to_know_your_wifi_hotspot_name_only_you_can_skip_this_permission_if_you_want">This is needed to know your wifi/hotspot name &amp; info only and never used for anything else. You can skip this if you want.</string>
    <string name="grant_permission">Grant permission</string>
    <string name="granted">Granted</string>
    <string name="no_need">No need</string>
    <string name="open_settings">Open settings</string>
    <string name="hashes">######</string>
    <string name="key">"🔑 "</string>
    <string name="pc">"💻 "</string>
    <string name="intro">Intro</string>
    <string name="_3_security_layers">3 Security Layers</string>
    <string name="qr">QR</string>
    <string name="qr_icon"></string>
    <string name="pc_icon"></string>
    <string name="requires_location_permission">ℹ️ Requires location permission &amp; 5GHz band</string>
    <string name="turbo_mode_inactive">Turbo mode inactive!</string>
    <string name="file_transfer_speed_is_limited">File transfer speed is limited</string>
    <string name="turn_on_location_permission_to_detect_wifi_hotspot_only">💡 Turn on location permission(To detect wifi/hotspot only)</string>
    <string name="share_faster_easier_to_any_device">Share faster, easier, to any device!</string>
    <string name="turn_on">Turn on</string>
    <string name="set_up_hotspot_with_5ghz_ap_band_turn_wifi_off_first">💡 Set up Hotspot with 5GHz AP band</string>
    <string name="turbo_mode_is_ready_transfer_speeds_are_up_to_32mb_s_now">Turbo mode is ready. Make sure Hotspot has 5GHz AP band.</string>
    <string name="set_up">Set up</string>
    <string name="already_done">Already done</string>
    <string name="don_t_save">Don\'t save</string>
    <string name="turbo_mode_active">Turbo mode active</string>
    <string name="speed_boosted_up_to_32mb_s">Speed boosted up to 16–32MB/s</string>
    <string name="you_don_t_have_any_turbo_token_left_go_to_home_and_claim_daily_reward_or_watch_ad_to_get_more_token">You don\'t have any turbo token left! Go to home and claim daily reward or watch ad to get more tokens.</string>
    <string name="out_of_turbo_token">Out of Turbo tokens!</string>
    <string name="fa_check"></string>
    <string name="qr_hint">Connection QR</string>
    <string name="token">… Token</string>
    <string name="token_multi">Tokens</string>
    <string name="token_single">Token</string>
    <string name="fa_info"></string>
    <string name="turbo_tokens">Turbo Tokens</string>
    <string name="turbo_tokens_lets_you_to_use_turbo_mode_while_sending_files_you_can_get_tokens_by_claiming_daily_reward_or_watching_ads">Turbo tokens lets you to use Turbo mode while sending files. You can get tokens by claiming daily reward or watching ads.</string>
    <string name="watch_ad">Watch ad</string>
    <string name="fa_plus_circle"></string>
    <string name="watch_ad_to_get_more_tokens">Watch ad to get tokens now</string>
    <string name="static_ip_info">🔐 Static SSL certificate generated. Proceed if denied by browser, its safe.</string>
    <string name="daily_reward_00_00_00">Daily reward: 00:00:00</string>
    <string name="you_have_1_token_reward">You have 1 Token reward</string>
    <string name="fa_prev"></string>
    <string name="keep_the_devices_vertically_aligned">Keep the devices vertically aligned</string>
    <string name="autofocus">Autofocus</string>
    <string name="scan_to_receive">Scan to receive</string>
    <string name="connecting">Connecting…</string>
    <string name="sender_device">Sender device</string>
    <string name="unknown_network">Unknown network</string>
    <string name="connected">Connected!</string>
    <string name="starting">Starting…</string>
    <string name="received_0_file">Received: 0 file</string>
    <string name="fa_wifi"></string>
    <string name="fa_file"></string>
    <string name="fa_exchange"></string>
    <string name="fa_check_circle2"></string>
    <string name="total_0b">Total: 0B</string>
    <string name="fs_check_circle"></string>
    <string name="fa_check_circle"></string>
    <string name="loading">Loading…</string>
    <string name="_0b_received_in_0ms_0b_s">0B received in 0ms - 0B/S</string>
    <string name="incoming_portal">Incoming portal</string>
    <string name="receiver_inactive">Receiver inactive</string>
    <string name="uploading"></string>
    <string name="done">Done</string>
    <string name="failed">Failed</string>
    <string name="receiving">Receiving…</string>
    <string name="received">Received</string>
    <string name="unfinished">Unfinished</string>
    <string name="receiver">Receiver</string>
    <string name="use_slow_wifi">Use slow wifi</string>
    <string name="make_sure_all_the_senders_are_on_the_same_wifi_network">Make sure all the senders are on the same wifi network!</string>
    <string name="join_a_wifi">Join a Wifi</string>
    <string name="connect_wifi_or_turn_on_hotspot">Join Wifi or turn on Hotspot</string>
    <string name="connect_to_the_senders_wifi_or_turn_on_your_hotspot">Join to the senders Wifi or Turn on your Hotspot.</string>
    <string name="step_1_goto_portable_hotspot_settings">Step 1: Goto Portable hotspot settings</string>
    <string name="step_2_select_5ghz_ap_band">Step 2: Select 5GHz AP band</string>
    <string name="join_wifi">Join Wifi</string>
    <string name="turbo_mode_is_ready">Turbo mode is ready with 5GHz Wifi. Use Hotspot for 2X speed.</string>
    <string name="no_information">No information</string>
    <string name="unknown_file">Unknown file</string>
    <string name="unknown_user">Unknown user</string>
    <string name="unknown_track">Unknown track</string>
    <string name="fa_music"></string>
    <string name="make_sure_the_receiver_is_connected_to_your_wifi_hotspot">Make sure the receiver is connected to your Wifi/Hotspot</string>
    <string name="dark_mode_is_in_beta_stage_we_will_improve_it_in_the_next_updates">Dark mode is in beta stage. We will improve it in the next updates.</string>
    <string name="back_icon"></string>
    <string name="fa_arrow_down"></string>
    <string name="receiving_files">Receiving files...</string>
    <string name="receiver_is_receiving_files_from_a_portal_tap_to_open">📥 Receiver is receiving files from a portal. Tap to open.</string>
    <string name="version_info">Sharlet(1.981-pub) - by MoonsLab</string>
    <string name="_0">0</string>
</resources>