<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layout_height="wrap_content"
    android:focusable="true">
    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:background="@drawable/card_bordered"
                android:id="@+id/file_image"
                android:layout_marginTop="9dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/music_list_primary"/>
            <TextView
                android:fontFamily="@font/trebuc"
                android:id="@+id/file_name"
                android:textColor="@color/text_color_black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:singleLine="true"
                android:ellipsize="middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unknown_track"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/line"
            android:layout_marginStart="75dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/fav_tag"
                android:background="@drawable/card_bordered"
                android:padding="3dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/primary"
                    android:text="@string/fa_music"
                    android:fontFamily="@font/font_awesome_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/playing_tag"
                android:background="@drawable/card_bordered"
                android:padding="3dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:textSize="13sp"
                android:textColor="@color/primary"
                android:text="\uf144"
                android:fontFamily="@font/font_awesome_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </RelativeLayout>
            <TextView
                android:textColor="@color/grey"
                android:singleLine="true"
                android:ellipsize="middle"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/trebuc"
                android:id="@+id/file_info"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_information"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>